--- a/.github/workflows/release-lineage22.yml
+++ b/.github/workflows/release-lineage22.yml
@@ -29,15 +29,13 @@ jobs:
             libc6 curl libstdc++6 git wget libssl-dev zstd \
             lld python3
 
-      - name: Clone kernel repo prepare for compile
+      - name: Clone kernel repo & prepare for compile
         run: |
           git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6125 --depth=1 -b lineage-22.2
           cp ksumakefile.patch android_kernel_xiaomi_sm6125/
           cp umount.patch android_kernel_xiaomi_sm6125/
           cp compile.sh android_kernel_xiaomi_sm6125/
-      
-      - name: Prepare build script
-        run: chmod +x ./android_kernel_xiaomi_sm6125/compile.sh
+          chmod +x ./android_kernel_xiaomi_sm6125/compile.sh
 
       - name: Compile kernel (${{ matrix.build-type }})
         run: |
@@ -68,21 +66,35 @@ jobs:
           sed -i 's/supported.versions=11-16/supported.versions=15/' AnyKernel3/anykernel.sh
           sed -i 's/device.name1=sweet/device.name1=ginkgo/' AnyKernel3/anykernel.sh
           sed -i 's/device.name2=sweetin/device.name2=ginkgo/' AnyKernel3/anykernel.sh
+          sed -i 's/ sm6150 AnyKernel3 template by Riaru Moda/ sm6125 AnyKernel3 template by Riaru Moda/' AnyKernel3/banner
 
       - name: Zip AnyKernel3 contents
         run: |
           ZIPNAME="aosp-perf-neon-${{ matrix.build-type }}-lineage22.2-${{ steps.ts.outputs.DATE }}-${{ steps.ts.outputs.TIME }}-ginkgo.zip"
+          SHENANIGANS="shenanigans-${{ matrix.build-type }}.zip"
           cd AnyKernel3
-          zip -r9 "../$ZIPNAME" ./*
-          echo "$ZIPNAME" > ZIPFILE.txt
+          zip -rq9 "../$ZIPNAME" ./*
+          cd ..
+          cd android_kernel_xiaomi_sm6125
+          rm -rf clang/
+          rm -rf gcc64/
+          rm -rf gcc32/
+          zip -rq9 "../$SHANANIGANS" ./*
+          cd ..
 
-      - name: Upload artifact
+      - name: Upload artifacts (kernel)
         uses: actions/upload-artifact@v6
         with:
           name: ${{ matrix.build-type }}-zip
           path: |
-            ZIPFILE.txt
-            *.zip
+            ./AnyKernel3/*.zip
+      
+      - name: Upload artifacts (shenanigans)
+        uses: actions/upload-artifact@v6
+        with:
+          name: shenanigans-${{ matrix.build-type }}-zip
+          path: |
+            ./android_kernel_xiaomi_sm6125/*.zip
 
   release:
     needs: build
