actions: fix for upload artifacts

--- a/.github/workflows/release-lineage22.yml
+++ b/.github/workflows/release-lineage22.yml
@@ -73,14 +73,13 @@ jobs:
           ZIPNAME="aosp-perf-neon-${{ matrix.build-type }}-lineage22.2-${{ steps.ts.outputs.DATE }}-${{ steps.ts.outputs.TIME }}-ginkgo.zip"
           cd AnyKernel3
           zip -rq9 "../$ZIPNAME" ./*
-          cd ..
 
       - name: Upload artifacts (kernel)
         uses: actions/upload-artifact@v6
         with:
           name: ${{ matrix.build-type }}-zip
           path: |
-            ./AnyKernel3/*.zip
+            *.zip
 
   release:
     needs: build
