--- a/.github/workflows/release-lineage.yml
+++ b/.github/workflows/release-lineage.yml
@@ -58,8 +58,6 @@ jobs:
         run: |
           git clone https://github.com/riarumoda/AnyKernel3 AnyKernel3 --depth=1
           cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/Image.gz AnyKernel3/
-          cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/dtb.img AnyKernel3/
-          cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/dtbo.img AnyKernel3/
           if [[ "${{ matrix.build-type }}" == "lineage-22.2" ]]; then
             sed -i 's/supported.versions=11-16/supported.versions=15/' AnyKernel3/anykernel.sh
           elif [[ "${{ matrix.build-type }}" == "lineage-23.0" ]]; then
@@ -109,7 +107,7 @@ jobs:
           body: |
             Notes:
               > Kernel has been built with -O3 optimization flag.     
-              > Kernel does not include any custom DTBO. ⚠️
+              > Kernel does not contain dtbo image. ⚠️
               > KernelSU latest manager can be found in [here](https://t.me/ksunext_ci) or in [here](https://github.com/KernelSU-Next/KernelSU-Next/actions/workflows/build-manager-ci.yml).   
           files: |
             artifacts/lineage-22.2-zip/*.zip
