actions, script: adapt for sm6125

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,47 +37,45 @@ jobs:
             libc6 curl libstdc++6 git wget libssl-dev zstd \
             lld python3
 
-      - name: Preparing to compile (${{ matrix.build-type }}, F2FS)
+      - name: Preparing to compile (${{ matrix.build-type }})
         run: |
-          if [ -d "$PWD/android_kernel_xiaomi_sm6150" ]; then
-            rm -rf android_kernel_xiaomi_sm6150
+          if [ -d "$PWD/android_kernel_xiaomi_sm6125" ]; then
+            rm -rf android_kernel_xiaomi_sm6125
           fi
           if [[ "${{ matrix.build-type }}" == "lineage-22-noksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-22.2
+            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6125 --depth=1 -b lineage-22.2
           elif [[ "${{ matrix.build-type }}" == "lineage-23-noksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-23.0
+            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6125 --depth=1 -b lineage-23.0
           elif [[ "${{ matrix.build-type }}" == "lineage-22-ksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-22.2
+            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6125 --depth=1 -b lineage-22.2
           elif [[ "${{ matrix.build-type }}" == "lineage-23-ksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-23.0
+            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6125 --depth=1 -b lineage-23.0
           fi
-          cp build.sh android_kernel_xiaomi_sm6150/
-          chmod +x ./android_kernel_xiaomi_sm6150/build.sh
+          cp build.sh android_kernel_xiaomi_sm6125/
+          chmod +x ./android_kernel_xiaomi_sm6125/build.sh
 
-      - name: Compile the kernel (${{ matrix.build-type }}, F2FS)
+      - name: Compile the kernel (${{ matrix.build-type }})
         run: |
-          cd android_kernel_xiaomi_sm6150/
+          cd android_kernel_xiaomi_sm6125/
           echo "Starting to compile..."
           if [[ "${{ matrix.build-type }}" == "lineage-22-noksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=NONE --f2fs=F2FS_TBYOOL
+            ./build.sh trinket-perf_defconfig xiaomi-trinket.config ginkgo.config --ksu=NONE
           elif [[ "${{ matrix.build-type }}" == "lineage-23-noksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=NONE --f2fs=F2FS_TBYOOL
+            ./build.sh trinket-perf_defconfig xiaomi-trinket.config ginkgo.config --ksu=NONE
           elif [[ "${{ matrix.build-type }}" == "lineage-22-ksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=KSU_BLXX --f2fs=F2FS_TBYOOL
+            ./build.sh trinket-perf_defconfig xiaomi-trinket.config ginkgo.config --ksu=KSU_BLXX
           elif [[ "${{ matrix.build-type }}" == "lineage-23-ksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=KSU_BLXX --f2fs=F2FS_TBYOOL
+            ./build.sh trinket-perf_defconfig xiaomi-trinket.config ginkgo.config --ksu=KSU_BLXX
           fi
           cd ..
 
-      - name: Preparing AnyKernel3 (${{ matrix.build-type }}, F2FS)
+      - name: Preparing AnyKernel3 (${{ matrix.build-type }})
         run: |
           if [ -d "$PWD/AnyKernel3" ]; then
             rm -rf AnyKernel3
           fi
           git clone https://github.com/riarumoda/AnyKernel3 AnyKernel3 --depth=1
-          cp android_kernel_xiaomi_sm6150/out/arch/arm64/boot/Image.gz AnyKernel3/
-          cp android_kernel_xiaomi_sm6150/out/arch/arm64/boot/dtb.img AnyKernel3/
-          cp android_kernel_xiaomi_sm6150/out/arch/arm64/boot/dtbo.img AnyKernel3/
+          cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/Image.gz AnyKernel3/
           if [[ "${{ matrix.build-type }}" == "lineage-22-noksu" ]]; then
             sed -i 's/supported.versions=11-16/supported.versions=11-15/' AnyKernel3/anykernel.sh
           elif [[ "${{ matrix.build-type }}" == "lineage-23-noksu" ]]; then
@@ -87,68 +85,13 @@ jobs:
           elif [[ "${{ matrix.build-type }}" == "lineage-23-ksu" ]]; then
             sed -i 's/supported.versions=11-16/supported.versions=16/' AnyKernel3/anykernel.sh
           fi
+          sed -i 's/device.name1=sweet/device.name1=ginkgo/' AnyKernel3/anykernel.sh
+          sed -i 's/device.name2=sweetin/device.name2=ginkgo/' AnyKernel3/anykernel.sh
+          sed -i 's/ sm6150 AnyKernel3 template by Riaru Moda/ sm6125 AnyKernel3 template by Riaru Moda/' AnyKernel3/banner
 
-      - name: Zip kernel contents (${{ matrix.build-type }}, F2FS)
+      - name: Zip kernel contents (${{ matrix.build-type }})
         run: |
-          ZIPNAME="aosp-perf-neon-f2fs_compression-${{ matrix.build-type }}-${{ steps.ts.outputs.DATE }}-${{ steps.ts.outputs.TIME }}-sweet.zip"
-          cd AnyKernel3
-          zip -rq9 "../$ZIPNAME" ./*
-          cd ..
-
-      - name: Preparing to compile (${{ matrix.build-type }}, No F2FS)
-        run: |
-          if [ -d "$PWD/android_kernel_xiaomi_sm6150" ]; then
-            rm -rf android_kernel_xiaomi_sm6150
-          fi
-          if [[ "${{ matrix.build-type }}" == "lineage-22-noksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-22.2
-          elif [[ "${{ matrix.build-type }}" == "lineage-23-noksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-23.0
-          elif [[ "${{ matrix.build-type }}" == "lineage-22-ksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-22.2
-          elif [[ "${{ matrix.build-type }}" == "lineage-23-ksu" ]]; then
-            git clone https://github.com/LineageOS/android_kernel_xiaomi_sm6150 --depth=1 -b lineage-23.0
-          fi
-          cp build.sh android_kernel_xiaomi_sm6150/
-          chmod +x ./android_kernel_xiaomi_sm6150/build.sh
-
-      - name: Compile the kernel (${{ matrix.build-type }}, No F2FS)
-        run: |
-          cd android_kernel_xiaomi_sm6150/
-          echo "Starting to compile..."
-          if [[ "${{ matrix.build-type }}" == "lineage-22-noksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=NONE --f2fs=NONE
-          elif [[ "${{ matrix.build-type }}" == "lineage-23-noksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=NONE --f2fs=NONE
-          elif [[ "${{ matrix.build-type }}" == "lineage-22-ksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=KSU_BLXX --f2fs=NONE
-          elif [[ "${{ matrix.build-type }}" == "lineage-23-ksu" ]]; then
-            ./build.sh sdmsteppe-perf_defconfig sweet.config --ksu=KSU_BLXX --f2fs=NONE
-          fi
-          cd ..
-
-      - name: Preparing AnyKernel3 (${{ matrix.build-type }}, No F2FS)
-        run: |
-          if [ -d "$PWD/AnyKernel3" ]; then
-            rm -rf AnyKernel3
-          fi
-          git clone https://github.com/riarumoda/AnyKernel3 AnyKernel3 --depth=1
-          cp android_kernel_xiaomi_sm6150/out/arch/arm64/boot/Image.gz AnyKernel3/
-          cp android_kernel_xiaomi_sm6150/out/arch/arm64/boot/dtb.img AnyKernel3/
-          cp android_kernel_xiaomi_sm6150/out/arch/arm64/boot/dtbo.img AnyKernel3/
-          if [[ "${{ matrix.build-type }}" == "lineage-22-noksu" ]]; then
-            sed -i 's/supported.versions=11-16/supported.versions=11-15/' AnyKernel3/anykernel.sh
-          elif [[ "${{ matrix.build-type }}" == "lineage-23-noksu" ]]; then
-            sed -i 's/supported.versions=11-16/supported.versions=16/' AnyKernel3/anykernel.sh
-          elif [[ "${{ matrix.build-type }}" == "lineage-22-ksu" ]]; then
-            sed -i 's/supported.versions=11-16/supported.versions=11-15/' AnyKernel3/anykernel.sh
-          elif [[ "${{ matrix.build-type }}" == "lineage-23-ksu" ]]; then
-            sed -i 's/supported.versions=11-16/supported.versions=16/' AnyKernel3/anykernel.sh
-          fi
-
-      - name: Zip kernel contents (${{ matrix.build-type }}, No F2FS)
-        run: |
-          ZIPNAME="aosp-perf-neon-none-${{ matrix.build-type }}-${{ steps.ts.outputs.DATE }}-${{ steps.ts.outputs.TIME }}-sweet.zip"
+          ZIPNAME="aosp-perf-neon-${{ matrix.build-type }}-${{ steps.ts.outputs.DATE }}-${{ steps.ts.outputs.TIME }}-sweet.zip"
           cd AnyKernel3
           zip -rq9 "../$ZIPNAME" ./*
           cd ..
@@ -193,12 +136,11 @@ jobs:
           body: |
             > [!NOTE]
             > This build have integration with backslashxx's KernelSU.   
-            > This build include kprobes, kretprobes and ksu_temper_syscall_table integrated into KernelSU.
+            > This build include kprobes, kretprobes and ksu_temper_syscall_table integrated into KernelSU.   
             > KernelSU latest manager can be found in [here](https://github.com/backslashxx/KernelSU/releases).   
                
-            > [!WARNING]
-            > Use the F2FS Compression ZIP if your ROM is using F2FS Compression.   
-            > Use LineageOS 23 builds if you are on Android 16, for Android 15 and lower please use LineageOS 22 builds.
+            > [!WARNING]  
+            > Use LineageOS 23 builds if you are on Android 16, for Android 15 and lower please use LineageOS 22 builds.   
           files: |
             artifacts/lineage-22-noksu-zip/*.zip
             artifacts/lineage-23-noksu-zip/*.zip
