--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -62,6 +62,7 @@ jobs:
           fi
           git clone https://github.com/riarumoda/AnyKernel3 AnyKernel3 --depth=1
           cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/Image.gz AnyKernel3/
+          cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/dtb.img AnyKernel3/
           cp android_kernel_xiaomi_sm6125/out/arch/arm64/boot/dtbo.img AnyKernel3/
           sed -i 's/device.name1=sweet/device.name1=ginkgo/' AnyKernel3/anykernel.sh
           sed -i 's/device.name2=sweetin/device.name2=ginkgo/' AnyKernel3/anykernel.sh
